...
                              ).toList())),
                      Row(
                          mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                          children: [
                            Expanded(
                                child: SizedBox(
                                    key: Key("Text button"),
                                    width: screenWidth * 0.9,
                                    height: screenHeight * 0.04,
                                    child: CupertinoTextField(
                                        controller: textController))),
                            CupertinoButton(
                                key: Key("Cupertino button"),
                                child: Icon(Icons.send_sharp,
                                    size: screenText * 25),
                                onPressed: () =>
                                    sendMessage(textController.text.toString()))
                          ])
                    ])))
...
