...
import '../models/static_user.dart';
import 'package:intl/intl.dart';

class Login extends StatefulWidget {
  final Service loginService;

  const Login({Key? key, required this.loginService}) : super(key: key);

  @override
  State<Login> createState() => _LoginState();
}

class _LoginState extends State<Login> {
...
                          ]),
                          SizedBox(height: screenHeight * 0.06),
                          Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: [
                                Container(
                                    key: const Key("clickButtom"),
                                    height: screenHeight * 0.07,
                                    width: screenWidth * 0.85,
                                    child: MaterialButton(
                                        color: Colors.redAccent,
                                        onPressed: () async {
                                          if (await NetworkCheck().check()) {
...
