...

    return PassMarker.useMobileLayout!
        ? WillPopScope(
            onWillPop: () async => false,
            child: Scaffold(
                appBar: AppBar(
                    title: Text("PrCar",
                        style: TextStyle(fontSize: screenText * 20)),
                    backgroundColor: Colors.redAccent,
                    actions: [
                      !PassMarker.from
                          ? Row(children: [
                              Text('Clear filter!',
...
                                    _updateMarkers();
                                  },
                                  icon: Icon(Icons.autorenew_rounded,
                                      size: screenText * 25))
                            ])
                          : Row(children: [
                              Text('Filters',
                                  style: TextStyle(
                                      fontSize: screenText * 20,
                                      color: Colors.white,
                                      fontWeight: FontWeight.bold)),
                              IconButton(
                                  onPressed: () {
...
                                  });
                                }
                              });
                            }
                          }),
                      ListTile(
                          title: Text("Configuration",
                              style: TextStyle(fontSize: screenText * 16)),
                          onTap: () async {
                            User? user = widget.homePageService.currentUser();
                            String confirmed = await _isConfirmed(user!);

                            Navigator.push(
...
