...
                                        const AlwaysScrollableScrollPhysics(),
                                    shrinkWrap: true,
                                    itemCount: res == [] ? 0 : res.length,
                                    itemBuilder: (context, index) {
                                      if (PassMarker.status[index] != 'e') {
                                        return Container(
                                          key: Key("click booking-out tablet"),
                                            padding: EdgeInsets.all(
                                                screenHeight * 0.008),
                                            child: Column(
                                                mainAxisAlignment:
                                                    MainAxisAlignment.center,
                                                crossAxisAlignment:
...
                                                                            textAlign: TextAlign.center),
                                                                        shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(15)),
                                                                        content: Column(mainAxisSize: MainAxisSize.min, children: [
                                                                          SizedBox(
                                                                              height: screenHeight * 0.03),
                                                                          Container(
                                                                            key: (Key("Chat button tablet")),
                                                                              height: screenHeight * 0.09,
                                                                              width: screenWidth * 0.5,
                                                                              decoration: BoxDecoration(color: Colors.redAccent, border: Border.all(width: 5.0, color: Colors.grey)),
                                                                              child: MaterialButton(
                                                                                onPressed: () async {
                                                                                  if (await NetworkCheck().check()) {
...
