...
                                style: TextStyle(
                                    fontWeight: FontWeight.bold,
                                    color: Colors.redAccent,
                                    fontSize: screenText * 32))),
                        SizedBox(height: screenHeight * 0.02),
                        PriceButton(
                            key: Key("price button tablet"),
                            screenHeight: screenHeight,
                            screenWidth: screenWidth,
                            screenText: screenText,
                            value: counter.toString()),
                        SizedBox(height: screenHeight * 0.03),
                        Row(
...
                                            .decrementCounter(counter);
                                      });
                                    }
                                  }),
                              SizedBox(width: screenWidth * 0.2),
                              TextButton(
                                  key: Key("add button tablet"),
                                  style: TextButton.styleFrom(
                                      primary: Colors.white,
                                      backgroundColor: Colors.redAccent,
                                      padding:
                                          EdgeInsets.all(screenWidth * 0.04)),
                                  child: Icon(Icons.add, size: screenText * 28),
...
