...
                              ]),
                          SizedBox(height: screenHeight * 0.06),
                          Row(
                              mainAxisAlignment: MainAxisAlignment.center,
                              children: [
                                Container(
                                    key: const Key("clickButtom2"),
                                    height: screenHeight * 0.07,
                                    width: screenWidth * 0.85,
                                    child: MaterialButton(
                                        color: Colors.redAccent,
                                        onPressed: () async {
                                          if (await NetworkCheck().check()) {
...
                                          } else {
                                            Fluttertoast.showToast(
                                                msg: 'No internet connection',
                                                fontSize: 20);
                                          }
                                        },
                                        child: Text("Login",
                                            style: TextStyle(
                                                color: Colors.white,
                                                fontSize: screenText * 35))),
                                    decoration: BoxDecoration(
                                        color: Colors.deepPurple,
                                        borderRadius: BorderRadius.circular(12),
...
                                                  password:
                                                      _passwordController2.text,
                                                  context: context);
                                          /* User? user =
                                              await loginUsingEmailPassword(
                                                  email:
                                                      'marinvargasf@gmail.com',
                                                  password: 'vargas22',
                                                  context: context);*/
                                          if (user != null) {
                                            await widget.loginService
                                                .firebasefirestore()
                                                .collection('users')
...
