...
                          ])),
                  SizedBox(height: screenHeight * 0.04),
                  Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Container(
                            key: Key("logout button"),
                            height: screenHeight * 0.07,
                            width: screenWidth * 0.7,
                            child: MaterialButton(
                                color: Colors.grey.shade500,
                                onPressed: () async {
                                  if (await NetworkCheck().check()) {
...
                                  } else {
                                    Fluttertoast.showToast(
                                        msg: 'No internet connection',
                                        fontSize: 20);
                                  }
                                },
                                child: Text("Logout",
                                    style: TextStyle(
                                        color: Colors.white,
                                        fontSize: screenText * 22))),
                            decoration: BoxDecoration(
                                color: Colors.deepPurple,
                                borderRadius: BorderRadius.circular(12),
...
                                                                context);
                                                            Navigator
                                                                .pushAndRemoveUntil(
                                                                    context,
                                                                    MaterialPageRoute(
                                                                        builder: (context) =>
                                                                            Login(
                                                                              loginService: Service(),
                                                                            )),
                                                                    (Route<dynamic>
                                                                            route) =>
                                                                        false);
                                                          } else {
...
                                                              fontSize:
                                                                  screenText *
                                                                      24)))
                                                ])
                                              ]));
                                },
                                child: Text("Delete Account",
                                    style: TextStyle(
                                        color: Colors.white,
                                        fontSize: screenText * 22))),
                            decoration: BoxDecoration(
                                color: Colors.black87,
                                borderRadius: BorderRadius.circular(12),
...
                                ])),
                        SizedBox(height: screenHeight * 0.04),
                        Column(
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              Container(
                                  key: Key("logout button tablet"),
                                  height: screenHeight * 0.07,
                                  width: screenWidth * 0.7,
                                  child: MaterialButton(
                                      color: Colors.grey.shade500,
                                      onPressed: () async {
                                        if (await NetworkCheck().check()) {
...
